# Shoonyakasha

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  vcpkg.json
cmake/: ShoonyakashaConfig.cmake.in
docs/: faq.md  index.md  philosophy.md
docs/architecture/: cython-bridge.md  ecs-design.md  facade-pattern.md  frame-graph-pipeline.md  overview.md
docs/examples/: cpp-examples.md  python-examples.md
docs/getting-started/: cpp-quickstart.md  prerequisites.md  python-quickstart.md
docs/guides/: animation.md  cameras-and-controllers.md  custom-shader-uniforms.md  entities-and-components.md  json-render-pipeline.md  lighting-and-ibl.md  loading-scenes.md  materials.md  physics.md  scene-serialization.md
docs/old/: CameraSystemIntegration.md  declarative_ssbo_data_flow.md
docs/plans/: 2026-03-04-engine-documentation-design.md  2026-03-04-engine-documentation-plan.md  2026-07-01-low-level-python-ecs-bindings.md
examples/bloom_test/: BloomTestApp.cpp  BloomTestApp.h  CMakeLists.txt  bloom_pipeline.json  test_app.cpp
examples/declarative_sponza_test/: CMakeLists.txt  DeclarativeSponzaApp.cpp  DeclarativeSponzaApp.h  test_app.cpp
examples/declarative_sponza_test/shaders/: fullscreen.vert  particle.frag.spv  particle.vert.spv  particle_sim.comp  pbr_gbuffer.frag.spv
examples/declarative_sponza_test/shaders/ibl/: brdf_lut.comp
examples/facade_test/: CMakeLists.txt  main.cpp
examples/full_showcase/: showcase_demo.py  showcase_pipeline.json
examples/particle_flow_example/: CMakeLists.txt  ParticleFlowApp.cpp  ParticleFlowApp.h  pbr_ibl_pipeline_v3.json  ssbo_pipeline.json  test_app.cpp
examples/particle_flow_example/pbr_ibl_shaders/: particle.frag  particle_sim.comp.spv
examples/particle_flow_example/shaders/: bloom_extract.frag  forward_transparent.vert.spv  fullscreen.vert  particle.vert  particle.vert.spv  particle_sim.comp  particle_sim.comp.spv  pbr_gbuffer.vert.spv  tonemap.frag
examples/particle_flow_example/shaders/ibl/: prefilter_convolution.comp.spv
examples/particle_test/: CMakeLists.txt  ParticleTestApp.cpp  ParticleTestApp.h  particle_pipeline.json  test_app.cpp
examples/particle_test/shaders/: particle.frag  particle.frag.spv  particle.vert  particle.vert.spv  particle_sim.comp  particle_sim.comp.spv
examples/pbr_physics_particles/: CMakeLists.txt  CombinedExampleApp.cpp  CombinedExampleApp.h  pipeline.json  test_app.cpp
examples/physics_test/: CMakeLists.txt  PhysicsTestApp.cpp  PhysicsTestApp.h  pipeline.json  test_app.cpp
examples/physics_test/shaders/: pbr_gbuffer.vert  tonemap.frag
examples/skinned_mesh_test/: CMakeLists.txt  SkinnedMeshApp.cpp  SkinnedMeshApp.h  test_app.cpp
examples/skinned_mesh_test/shaders/: forward_transparent.frag
examples/sprite_ui_test/: sprite_pipeline.json  sprite_ui_demo.py
examples/ssbo_data_flow_example/: CMakeLists.txt  DeclarativeSponzaApp.cpp  DeclarativeSponzaApp.h  SSBODataFlowApp.cpp  SSBODataFlowApp.h  ssbo_pipeline.json  ssbo_pipeline_from_file.json  test_app.cpp
include/: Shoonyakasha.h
include/Animation/: AnimationEvaluator.h
include/App/: ApplicationBase.h
include/Core/: EventSystem.h  Logger.h
include/ECS/: CameraController.h  CameraControllerBuilders.h  Core.h  InputSystem.h  PhysicsSystem.h  RenderComponents.h  Scene.h  ScriptComponentBag.h  SkeletalAnimationSystem.h  SkeletonComponents.h  Sprite2DComponents.h  Systems.h  TextRenderSystem.h  UILayoutSystem.h
include/Facade/: EcsAPI.h  EngineAPI.h  FacadeTypes.h  InputAPI.h  PhysicsAPI.h  SceneAPI.h
include/FrameGraph/: BufferLayoutCompiler.h  DotPathResolver.h  EntityRenderExecutor.h  FrameGraphRenderer.h  SharedBufferRegistry.h  StagingBufferManager.h
include/GPU/: GPUResourceFactory.h  GPUTypes.h
include/IBL/: IBLGenerator.h
include/Resources/: AnimationData.h  FontLoader.h  GltfSceneLoader.h  ResourceManager.h  Sprite2DManager.h
include/Vulkan/: UniformBuffer.h  VertexTypes.h  VulkanBuffer.h  VulkanCommandBuffer.h  VulkanComputePipeline.h  VulkanCubemap.h  VulkanDescriptorSystem.h  VulkanDevice.h  VulkanImage.h  VulkanInstance.h  VulkanMemoryAllocator.h  VulkanPipeline.h  VulkanRenderPass.h  VulkanSwapChain.h  VulkanTexture.h  VulkanWindow.h
python/: CMakeLists.txt
python/examples/: demo.py  ecs_bindings_demo.py  pbr_ibl_pipeline_v3.json  skinned_fox_demo.py  skinned_pipeline.json
python/examples/shaders/: bloom_blur_h.frag  bloom_blur_v.frag  particle.frag  particle.frag.spv  particle.vert  particle.vert.spv  pbr_ibl_lighting.frag  pbr_ibl_lighting.frag.spv  skinned_gbuffer.vert  skinned_gbuffer.vert.spv  tonemap.frag.spv
python/examples/shaders/ibl/: equirect_to_cubemap.comp  irradiance_convolution.comp
python/shoonyakasha/: __init__.py  _callback_bridge.h  _ecs_bridge.h  _engine_api.pxd  _facade_types.pxd  _glm_bridge.h  _shoonyakasha.pyd  _shoonyakasha.pyx
src/Animation/: AnimationEvaluator.cpp
src/App/: ApplicationBase.cpp
src/Core/: EventSystem.cpp  Logger.cpp
src/ECS/: PhysicsSystem.cpp  SkeletalAnimationSystem.cpp
src/Facade/: EcsAPI.cpp  EngineAPI.cpp  FacadeInternal.h  InputAPI.cpp  InputAPIImpl.h  PhysicsAPI.cpp  PhysicsAPIImpl.h  SceneAPI.cpp
src/FrameGraph/: DotPathResolver.cpp  EntityRenderExecutor.cpp  FrameGraphRenderer.cpp  SharedBufferRegistry.cpp  StagingBufferManager.cpp
src/GPU/: GPUResourceFactory.cpp
src/IBL/: IBLGenerator.cpp
src/Resources/: FontLoader.cpp  GltfSceneLoader.cpp  ResourceManager.cpp  Sprite2DManager.cpp
tests/: CMakeLists.txt  TestHelpers.h
tests/ecs/: AnimationDataTest.cpp  AnimationEvaluatorTest.cpp  AnimationPlaybackTest.cpp  CameraTest.cpp  ComponentRegistryTest.cpp  EntityBuilderTest.cpp  RenderComponentsTest.cpp  Sprite2DComponentsTest.cpp  SystemsTest.cpp  TransformTest.cpp
tests/facade/: EcsAPITest.cpp  FacadeTypesTest.cpp  SceneAPITest.cpp
tests/framegraph/: DotPathResolverECSTest.cpp
tests/unit/: BufferLayoutCompilerTest.cpp  DotPathResolverTest.cpp  EventSystemTest.cpp  FrameGraphJsonTest.cpp  GPUTypesTest.cpp  ResourceCacheTest.cpp  SharedBufferRegistryTest.cpp  VertexFormatRegistryTest.cpp
(+80 files in other folders)
